--- a/Omnistat/ja.lproj/Localizable.strings
+++ b/Omnistat/ja.lproj/Localizable.strings
@@ -1,10 +1,10 @@
-/*
- Localizable.strings
- Omnistat
- 
- Created by Mathieu Bolard on 11/09/2014.
- Copyright (c) 2014 Mathieu Bolard. All rights reserved.
- */
+/* 
+  Localizable.strings
+  Omnistat
+
+  Created by Mathieu Bolard on 11/09/2014.
+  Copyright (c) 2014 Mathieu Bolard. All rights reserved.
+*/
 
 
 /* Remaining audio playback time */
@@ -230,13 +230,16 @@
 "SETTINGS_TITLE" = "設定";
 
 /* Autoreset cellular data switch */
-"SETTINGS_CELL_AUTORESET" = "モバイルデータ通信量の自動リセット";
+"SETTINGS_CELL_AUTORESET" = "モバイルデータの自動リセット";
 
-/* Cellular data plan type */
-"SETTINGS_CELL_PLAN" = "リセット期間";
+/* Autoreset wifi data switch */
+"SETTINGS_WIFI_AUTORESET" = "WIFIデータの自動リセット";
 
-/* Cellular data plan start date */
-"SETTINGS_CELL_START" = "リセット日";
+/* Data plan type */
+"SETTINGS_PLAN" = "リセット期間";
+
+/* Data plan start date */
+"SETTINGS_START" = "リセット日";
 
 /* Data downloaded */
 "SETTINGS_DATA_DL" = "ダウンロード";
@@ -281,5 +284,5 @@
 /* Translation by ( %@ will be replaced by your name ) */
 "TRANSLATION_BY" = "%@による日本語訳";
 
-/* Your name for the translation credits */
+/* Watch app Storage title */
 "TRANSLATION_NAME" = "Ken-ichi Yamada";
